End of Section 8

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,7 +1,12 @@
+<!--suppress ALL -->
 <div class="container mt-5">
   <div *ngIf="!registerMode" style="text-align: center;">
-    <h1>Find your match</h1>
-    <p class="lead">Come on in to view your matches... all you need to do is sign up and enjoy!!!</p>
+<!--    <img src="client/src/app/images/rms.png" alt="Logo"/>-->
+    <h1><img src="assets/rms.png" alt="" height="50" width="50"/>P.A.C.E.<span style="font-size: small; vertical-align: super">&copy;</span></h1>
+    <h4 style="font-variant: small-caps; color: gray">Powered by RMS<span style="font-size: small; vertical-align: super">&copy;</span></h4>
+    <h5 style="font-variant: small-caps; font-size: medium">A cross-functional multi-platform web application for healthcare professionals</h5>
+    <br/>
+    <br/>
     <div class="text-center">
       <button (click)="registerToggle()" class="btn btn-primary btn-lg mr-2">Register</button>
       <button class="btn btn-info btn-lg">Learn More</button>
