--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -23,7 +23,8 @@
       </ul>
 
     <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
-      <a class="dropdown-toggle text-light" dropdownToggle>Healthcare Professional: {{user.username | titlecase}} </a>
+      <img src="{{user.photoUrl}}" alt="{{user.username}}">
+      <a class="dropdown-toggle text-light ml-2" dropdownToggle>Healthcare Professional: {{user.username | titlecase}} </a>
       <div *dropdownMenu class="dropdown-menu mt-3">
         <a routerLink='/member/edit' class="dropdown-item">Edit Profile</a>
         <div class="dropdown-divider"></div>
